--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -259,7 +259,7 @@ input.selecteur-3:checked ~ .contenu .slider > li:nth-child(3) {
   }
   #hamburger {
     display: block;
-    //position: absolute;
+    position: absolute;
     z-index: 1;
     left: 30px;
     margin-top: 30px;
@@ -276,12 +276,11 @@ input.selecteur-3:checked ~ .contenu .slider > li:nth-child(3) {
     border: 1px black solid;
     top: 54px;
     right: 0px;
-    width: 200px;
-    height: 200px;
+    height: fit-content;
   }
-  .contenu{
-    width: 100%;
-    object-fit: cover;
-    z-index: -1;
+  .contenu {
+    display: block;
+    max-width: 100%;
+    height: 75vh;
   }
 }
