--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -192,6 +192,7 @@ input.selecteur-3:checked ~ .contenu .slider > li:nth-child(3) {
   font-size: 30px;
   margin: 1px;
   border: solid 1px #fff;
+  height: 35px;
   width: 100%;
   background: rgba(255, 255, 255, 0.199);
 }
@@ -242,7 +243,7 @@ input.selecteur-3:checked ~ .contenu .slider > li:nth-child(3) {
   display: none;
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (min-width: 300px) and (max-width: 600px) {
   .head {
     width: 100%;
     position: fixed;
@@ -275,12 +276,54 @@ input.selecteur-3:checked ~ .contenu .slider > li:nth-child(3) {
     background-color: white;
     border: 1px black solid;
     top: 54px;
-    right: 0px;
     height: fit-content;
   }
   .contenu {
     display: block;
     max-width: 100%;
     height: 75vh;
+  }
+}
+@media screen and (min-width: 600px) and (max-width: 900px) {
+  .head {
+    width: 100%;
+    position: fixed;
+  }
+  .nav {
+    display: none;
+    z-index: -1;
+  }
+  .subnav {
+    display: none;
+    position: absolute;
+    top: -50px;
+    z-index: 1;
+  }
+  #hamburger {
+    display: block;
+    position: absolute;
+    z-index: 1;
+    left: 30px;
+    margin-top: 30px;
+    font-size: 30px;
+  }
+  .menu_active {
+    display: flex;
+    z-index: 10000;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    text-align: center;
+    background-color: white;
+    border: 1px black solid;
+    top: 22px;
+    width: 300px;
+    gap: 0px;
+    height: fit-content;
+  }
+  .contenu {
+    display: block;
+    max-width: 100%;
+    height: 79vh;
   }
 }
