--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -237,6 +237,9 @@ input.selecteur-3:checked ~ .contenu .slider > li:nth-child(3) {
   }
 }
 
+.head{
+  width: 150px;
+}
 #hamburger {
   font-size: 50px;
   cursor: pointer;
