--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -31,6 +31,7 @@ main{
         height: 800px;
         width: 50%;
         margin-left: 20px;
+        z-index: 0;
     }
 
     #BlocPresentationCarte{
