--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -19,3 +19,9 @@
     font-size: 28px;
     text-align: center;
 }
+
+@mixin button {
+    border-radius: 5px;
+    width: 200px;
+    height: 40px;
+}
