--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -32,6 +32,8 @@ main{
         width: 50%;
         margin-left: 20px;
         z-index: 0;
+        border-radius: 5px;
+        box-shadow: 2px 2px 10px grey;
     }
 
     #BlocPresentationCarte{
