ajout liens boutons transparents / modifs marges footer

--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -9,10 +9,9 @@ footer{
     justify-content: space-between;
     display: flex;
     flex-direction: column;
-    margin-top: 50px;
     #logos_footer{
         width: 80%;
-        margin: 0 auto;
+        margin: 10px auto;
     }
     #footer_bottom{
         display: flex;
