--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -27,6 +27,15 @@ form{
     margin-bottom: 2%;
 }
 
+.BoutonTransparent a:visited{
+    color: inherit;
+    text-decoration: none;
+}
+
+.BoutonTransparent a:link{ 
+ text-decoration:none; 
+} 
+
 button:hover{
     cursor: pointer; 
 }
