--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -228,6 +228,7 @@ input.selecteur-3:checked ~ .contenu .slider > li:nth-child(3) {
   line-height: 100px;
   height: 100px;
   font-weight: bold;
+  box-shadow: 2px 2px 10px grey;
 
   a {
     color: black;
