Modif hover sur article 'la douceur du Nord'

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -196,6 +196,9 @@ main{
             position: relative;
             top: -150px;
         }
+        div:hover h1{
+            color: black;
+        }
     }
 
     #PartezEnVoyage{
