--- a/scss/pages/_temoignage.scss
+++ b/scss/pages/_temoignage.scss
@@ -26,7 +26,7 @@ header h3 {
   font-size: 1em;
 }
 
-.banniere {
+.banniere3 { 
   background-image: url(../../img/St_omer_cathedrale_ND.jpg);
   background-repeat: no-repeat;
   background-size: cover;
