--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,8 @@
 @import "layout/footer";
 @import "layout/header";
 @import "layout/main_section";
+@import "layout/navigation";
+
 
 // PAGE
 @import "pages/itineraire";
